Changed server API to return raw transactions instead of join with account & category
Account and category are now cached on the client side.
